refactor: 高レベルAPIに置き換え、コメント記述
lettersの最後の要素を取得する処理を`getLast`に変更し、コードの意図を明確化。コメントを追加。